[tool.poetry]
name = "nonebot_plugin_emojimix"
version = "0.2.0"
description = "Nonebot2 plugin for emojimix"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-emojimix"
repository = "https://github.com/noneplugin/nonebot-plugin-emojimix"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.0-rc.1", extras = ["fastapi"] }
nonebot-adapter-onebot = "^2.2.0"
httpx = ">=0.19.0"
emoji = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
